--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ys-nvc-official",
+  "name": "ys-lingai-mall",
   "version": "1.0.0",
-  "description": "雷士照明",
+  "description": "",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
+    "build": "nuxi build",
+    "dev": "nuxi dev",
     "start": "nuxt start",
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install"
@@ -15,36 +15,37 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "@element-plus/nuxt": "^1.0.4",
+    "@spruce-hub/eui": "1.0.0-alpha.2",
+    "@spruce-hub/icons": "1.0.0-alpha.1",
     "@spruce-hub/nuxt-fetch": "^1.1.0",
     "@spruce-hub/nuxt-route": "^1.0.1",
-    "axios": "^1.3.6",
     "element-plus": "^2.3.4",
     "js-cookie": "^3.0.5",
-    "lodash": "^4.17.21",
-    "nuxt": "^3.4.2",
+    "lodash-es": "^4.17.21",
+    "nuxt": "^3.4.3",
+    "spruce-utils": "^0.6.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.1",
-    "@commitlint/config-conventional": "^17.6.1",
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
     "@types/js-cookie": "^3.0.3",
-    "@types/lodash": "^4.14.194",
-    "@types/node": "^18.16.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
+    "@types/lodash-es": "^4.17.7",
+    "@types/node": "^18.16.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "cz-customizable": "^7.0.0",
-    "eslint": "^8.39.0",
+    "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.11.0",
+    "eslint-plugin-vue": "^9.11.1",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.1",
-    "postcss-pxtorem": "^6.0.0",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
     "typescript": "^4.9.5",
-    "vue-eslint-parser": "^9.1.1"
+    "vue-eslint-parser": "^9.2.1"
   },
   "engines": {
     "node": ">=16.0.0",
